--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 body
 {
 
+    background: #1e1f24;
     color: #333;
     text-align: left;
     font-family: "Arial";
@@ -12,7 +13,7 @@ body
 
 #cabecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0,
     0.5);
     color: white;
@@ -20,6 +21,12 @@ body
     margin: 0;
     padding: 0.5em;
 }
+
+#cabecera #logo 
+{
+    width: 20px;
+    vertical-align: middle;
+}    
 
 #cabecera #tagline
 {
@@ -44,5 +51,6 @@ body
 }
 #post
 {
+    background: white;
     padding: 1em;
 }
